--- a/src/main/webapp/app/src/module/producer/template/producer.delete.html
+++ b/src/main/webapp/app/src/module/producer/template/producer.delete.html
@@ -5,13 +5,13 @@
 <div class="modal-body">
 	<label>Nome: </label> {{item.name}}
 	<br />
-	<label>Cpf: </label> {{item.cpf}}
+	<label>Cpf: </label> {{maskCpfCnpj(item.cpf)}}
 	<br />
 	<label>E-mail: </label> {{item.email}}
     
 </div>
 
 <div class="modal-footer">
-	<button class="btn btn-primary" ng-click="ok()">Sim</button>
-   	<button class="btn btn-warning" ng-click="cancel()">Não</button>
+	<button class="btn btn-primary btn-sm" ng-click="ok()">Sim</button>
+   	<button class="btn btn-warning btn-sm" ng-click="cancel()">Não</button>
 </div>
