--- a/src/main/webapp/app/src/module/producer/template/producer.search.html
+++ b/src/main/webapp/app/src/module/producer/template/producer.search.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div style="float: right; margin-top: 35px;">
-            <a href="" ng-click="newProducer()" class="btn btn-primary btn-circle" tooltip="Cadastrar e-mail"><i
+            <a href="" ng-click="newProducer()" class="btn btn-primary btn-circle" tooltip="Novo produtor"><i
                     class="fa fa-plus"></i></a>
         </div>
         <h3 class="page-header">Listagem de produtores</h3>
@@ -26,15 +26,6 @@
 
                         <div class="col-md-3">
                             <label>Email</label> <input class="form-control" ng-model="email">
-                        </div>
-
-                        <div class="col-md-3">
-                            <label>Status</label>
-                            <select class="form-control"
-                                    ng-model="status"
-                                    ng-options="statusP.value as statusP.name for statusP in statusProd">
-                                <option value="">Selecione...</option>
-                            </select>
                         </div>
 
                     </form>
@@ -70,32 +61,21 @@
                             <th class="text-left">Nome</th>
                             <th class="centralizer">Telefone</th>
                             <th class="text-left">Email</th>
-                            <th class="text-left">Corretora(s)</th>
-                            <th class="centralizer">Status</th>
                             <th class="centralizer">Ações</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="gradeU" ng-repeat="item in itens">
-                            <td class="centralizer">{{item.cpf}}</td>
+                            <td class="centralizer">{{maskCpfCnpj(item.cpf)}}</td>
                             <td class="text-left text-uppercase">{{item.name}}</td>
-                            <td class="centralizer">{{item.phone}}</td>
+                            <td class="centralizer">{{maskPhone(item.mobilePhone)}}</td>
                             <td class="text-left">{{item.email}}</td>
-                            <td class="text-left">
-                            	<span ng-repeat="itemBrokerage in item.producerBrokerages">
-                            		<span class="text-uppercase">{{itemBrokerage.brokerage.corporateName}}<br/></span>
-                            	</span>
-                            </td>
-                            <td class="centralizer"
-                                ng-class="{'bg_status_pendente': item.status == 'PENDING', 'bg_status_cadastrado': item.status == 'REGISTERED'}">
-                                {{statusProducer(item.status)}}
-                            </td>
                             <td class="centralizer">
                                 <a href="" ng-click="edit(item.id)" tooltip="Editar">
                                     <span class="fa fa-fw fa-edit"></span>
                                 </a>
 
-                                <a href="" ng-click="remove(item)" tooltip="Desativar">
+                                <a href="" ng-click="remove(item)" tooltip="Excluir">
                                     <span class="fa fa-trash-o"></span>
                                 </a>
                             </td>
