Implementação da criação de conta de novo cliente; Criação do cadastro de usuários por dentro do sistema; Listagem de dados utilizando o id do usuário pai, para trazer apenas os dados dos usuários pertencentes ao criador da conta e não listar para novos usuários criados a partir de outra conta; proteção das urls para não permitir o acesso a funções, de acordo com o tipo do usuário (Administrador/Usuário comum); Refatoração d estrutura de pastas e reorganização;

--- a/src/main/webapp/app/css/styles.css
+++ b/src/main/webapp/app/css/styles.css
@@ -527,7 +527,7 @@ li:hover {
 }
 
 .message-warning {
-    background-color: #ff960d !important;
+    background-color: #FF7416 !important;
     color: #FFFFFF !important;
     margin-top: 37px;
     border: solid 2px #FF7416 !important;
