--- a/src/main/webapp/app/src/module/customer/template/customer.form.html
+++ b/src/main/webapp/app/src/module/customer/template/customer.form.html
@@ -1,7 +1,7 @@
 <div class="row" style="float:left; margin-top:35px;">
     <div class="col-lg-12">
-        <h4 class="page-header-custom" ng-show="!showType">Cadastro de Segurados</h4>
-        <h4 class="page-header-custom" ng-show="showType">Alterar Segurado</h4>
+        <h4 class="page-header-custom" ng-show="!showType">Cadastro de segurados</h4>
+        <h4 class="page-header-custom" ng-show="showType">Alterar dados do segurado</h4>
     </div>
 </div>
 <form name="customerForm" novalidate>
