--- a/src/main/webapp/app/src/module/insurer/template/insurer.search.html
+++ b/src/main/webapp/app/src/module/insurer/template/insurer.search.html
@@ -4,7 +4,7 @@
             <a href="#/create-insurer" class="btn btn-primary btn-circle" tooltip="Nova Seguradora"><i
                     class="fa fa-plus"></i></a>
         </div>
-        <h3 class="page-header">Listagem Seguradoras</h3>
+        <h3 class="page-header">Listagem de seguradoras</h3>
     </div>
 
     <div class="col-lg-12">
@@ -47,7 +47,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Lista de Seguradoras
+                Seguradoras
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
@@ -69,10 +69,10 @@
                             <td class="centralizer">{{item.email}}</td>
                             <td class="centralizer">
                                 <a href="" ng-click="edit(item.id)" tooltip="Editar">
-                                    <span class="fa fa-fw fa-edit"></span>
+                                    <span class="fa fa-fw fa-edit fa-2x"></span>
                                 </a>
                                 <a href="" ng-click="remove(item)" tooltip="Excluir">
-                                    <span class="fa fa-trash-o"></span>
+                                    <span class="fa fa-trash-o fa-2x"></span>
                                 </a>
                             </td>
                         </tr>
