--- a/src/main/webapp/app/src/module/producer/template/producer.search.html
+++ b/src/main/webapp/app/src/module/producer/template/producer.search.html
@@ -72,11 +72,11 @@
                             <td class="text-left">{{item.email}}</td>
                             <td class="centralizer">
                                 <a href="" ng-click="edit(item.id)" tooltip="Editar">
-                                    <span class="fa fa-fw fa-edit"></span>
+                                    <span class="fa fa-fw fa-edit fa-2x"></span>
                                 </a>
 
                                 <a href="" ng-click="remove(item)" tooltip="Excluir">
-                                    <span class="fa fa-trash-o"></span>
+                                    <span class="fa fa-trash-o fa-2x"></span>
                                 </a>
                             </td>
                         </tr>
