--- a/src/main/webapp/app/src/module/property/template/sub-template/life/life.list.html
+++ b/src/main/webapp/app/src/module/property/template/sub-template/life/life.list.html
@@ -46,9 +46,12 @@
 								<td class="centralizer">{{item.life.lifeQuantity}}</td>
 								<td class="leftAlign">{{item.description}}</td>
 								<td class="centralizer">
-									<a href="" class="btn btn-info btn-xs" ng-click="edit(item.id)" tooltip="Visualizar">
-										<span class="fa fa-fw fa-search"></span>
-									</a>							
+									<a href="" ng-click="edit(item.id)" tooltip="Editar">
+										<span class="fa fa-fw fa-edit fa-2x"></span>
+									</a>
+									<a href="" ng-click="remove(item)" tooltip="Excluir">
+										<span class="fa fa-trash-o fa-2x"></span>
+									</a>
 								</td>
 							</tr>
 						</tbody>
