Iniciando implementações do cadastro de propostas, sendo utilizandas funções de autocomplete de produtor, seguradora e segurado; Criação de views para exibição dos detalhes dos ramos, ao selecionar o ramo, no cadastro da proposta; Criação da listagem de propostas; Iniciando implementação do save

--- a/src/main/webapp/app/src/module/property/template/sub-template/modal/selected-property.html
+++ b/src/main/webapp/app/src/module/property/template/sub-template/modal/selected-property.html
@@ -6,7 +6,7 @@
 
 	<form role="form" name="formProp">
 		<label>Propriedade</label>
-		<select class="form-control input-segoo"
+		<select class="form-control"
 			ng-model="property"
 			 ng-required="true"
 			ng-options="pro.value as pro.name for pro in properties">
