--- a/src/main/webapp/app/src/module/proposal/template/proposal.form.html
+++ b/src/main/webapp/app/src/module/proposal/template/proposal.form.html
@@ -475,6 +475,71 @@
                 </div>
             </div>
         </div>
+
+        <div class="row" ng-if="propertyType == 'VEHICLE'">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <p>Dados da Franquia</p>
+                                <hr />
+                            </div>
+                            <div class="col-md-4">
+                                <label>Franquia:</label>
+                                <div class="form-group">
+                                    <select type="radio" name="optionsFranchise" id="optionsRadios2" ng-model="franchise.franchiseType" class="form-control " ng-disabled="!enabedFields">
+                                        <option value="">-- Selecione --</option>
+                                        <option value="HULL">Casco</option>
+                                        <option value="GLASSES">Vidros</option>
+                                        <option value="HEADLIGHTS">Faróis</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <label>Valor da franquia (R$)</label>
+                                <input type="text" class="form-control " ng-disabled="!enabedFields"
+                                       ng-model="franchise.value" ui-number-mask="2" ui-negative-number>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <button class="btn btn-primary" ng-click="addFranchise(franchise)" ng-disabled="franchise.franchiseType == undefined">Adicionar</button>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row" ng-if="proposal.franchises.length > 0">
+                            <div class="panel-heading">Franquias selecionadas</div>
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-hover" id="dataTables-example">
+                                        <thead>
+                                        <tr>
+                                            <th class="centralizer">Descrição</th>
+                                            <th class="centralizer">Valor (R$)</th>
+                                            <th class="centralizer">Ações</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr class="gradeU" ng-repeat="item in proposal.franchises">
+                                            <td class="centralizer">{{getFranchiseDescription(item.franchiseType, propertyType)}}</td>
+                                            <td class="centralizer">{{item.value | currency:"R$ "}}</td>
+                                            <td class="centralizer">
+                                                <a href="" class="btn btn-smm btn-danger" ng-click="removeFranchise(item)" tooltip="Excluir">
+                                                    <span class="fa fa-trash-o"></span>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-12">
                 <button class="Button btn btn-primary" type="submit" ng-click="save()"
